# desmume-matrix

desmume/: README.LIN
desmume/src/: commandline.cpp  commandline.h
desmume/src/frontend/posix/: meson.build  meson_options.txt
desmume/src/frontend/posix/cli/: main.cpp
desmume/src/frontend/posix/matrix/: Info.plist  Makefile.am  main.cpp  matrix_client.h  meson.build  osxbuild
desmume/src/frontend/posix/matrix/doc/: Makefile.am  desmume-matrix.1
desmume/src/frontend/posix/shared/: matrix_client.cpp  matrix_client.h
